# reaction-roles

./: .gitignore  Cargo.toml  README.md  config.json  example.env
scripts/: tmuxkill.sh  tmuxstart.sh
src/: data.rs  main.rs
src/data/: config.rs  messagemap.rs  reactionmap.rs
